--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "Denis Hristov",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "morgan": "^1.10.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DenisHristov12/Natours-NodeJS.git"
