connect to mongo with mongoose

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=blackwall656
+DATABASE=mongodb+srv://blackwall656:<PASSWORD>@cluster0.bgzdc87.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_PASSWORD=denchu_mongoDB04
