implement filtering tours

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "eslint-plugin-react": "^7.37.5",
     "prettier": "^3.5.3"
   },
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DenisHristov12/Natours-NodeJS.git"
