--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "validator": "^13.15.0"
   },
   "devDependencies": {
+    "bcryptjs": "^3.0.2",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^10.1.1",
