--- a/config.env
+++ b/config.env
@@ -2,3 +2,6 @@ NODE_ENV=development
 PORT=3000
 DATABASE=mongodb+srv://blackwall656:<PASSWORD>@cluster0.bgzdc87.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_PASSWORD=denchu_mongoDB04
+
+JWT_SECRET=that-should-be-my-jwt-secret-which-is-super-long
+JWT_EXPIRES_IN=90d
