--- a/config.env
+++ b/config.env
@@ -5,3 +5,8 @@ DATABASE_PASSWORD=denchu_mongoDB04
 
 JWT_SECRET=that-should-be-my-jwt-secret-which-is-super-long
 JWT_EXPIRES_IN=90d
+
+EMAIL_USERNAME=4b4eccd20d18ef
+EMAIL_PASSWORD=ecaaf24e0a095a
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=25
