--- a/config.env
+++ b/config.env
@@ -5,6 +5,7 @@ DATABASE_PASSWORD=denchu_mongoDB04
 
 JWT_SECRET=that-should-be-my-jwt-secret-which-is-super-long
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=4b4eccd20d18ef
 EMAIL_PASSWORD=ecaaf24e0a095a
