--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,7 +21,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.2",
     "slugify": "^1.6.6",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "bcryptjs": "^3.0.2",
